demo-apps/todo-app/k8s/todo-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: todo-app
  labels:
    app: api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: todo-app-api
          image: localhost:5000/todo-app-api:0.1.0
          ports:
            - containerPort: 3001
