demo-apps/todo-app/k8s/todo-webapp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp
  namespace: todo-app
  labels:
    app: webapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webapp
  template:
    metadata:
      labels:
        app: webapp
    spec:
      containers:
        - name: todo-app-webapp
          image: localhost:5000/todo-app-webapp
          ports:
            - containerPort: 80
