demo-apps/todo-app/k8s/mongodb-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb
  namespace: todo-app
spec:
  # type: NodePort
  selector:
    app: mongodb
  ports:
  - protocol: TCP
    port: 27017
    targetPort: 27017
