demo-apps/todo-app/k8s/todo-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: todo-app
  labels:
    app: api
spec:
  ports:
    - port: 3001
      # map to container port
      targetPort: 3001
      protocol: TCP
  selector:
    app: api
