demo-apps/todo-app/k8s/todo-webapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapp
  namespace: todo-app
  labels:
    app: webapp
spec:
  ports:
    - port: 8080
      # map to container port
      targetPort: 80
      protocol: TCP
  selector:
    app: webapp
